--- a/views/publications/index.ejs
+++ b/views/publications/index.ejs
@@ -3,23 +3,21 @@
 
 <div class="container">
     <header class="jumbotron">
-        <div class="container">
-            <h1>This is publications page</h1>
-            <p>all publications sites</p>
-            <p>
-                <a class="btn btn-lg btn-primary" href="/publications/new">Add new publication</a>
-            </p>
-            <p>
-                <form action="/publications" method="GET" class="form-inline">
-                    <div class="form-group">
-                        <input type="text" name="search" placeholder="Publication search" class="form-control">
-                        <input type="submit" value="Search" class="btn btn-default">
-                    </div>
-                </form>
-            </p>
-        </div>
+        <h1 class="display-4">This is publications page</h1>
+        <p class="lead">all publications sites, this page contains all research, bala bala</p>
+        <hr class="my-4">
+        <p class="lead">
+            <a class="btn btn-lg btn-primary" href="/publications/new">Add new publication</a>
+        </p>
+        <p class="lead">
+            <form class="form-inline my-2 my-lg-0" action="/publications" method="GET">
+                <input class="form-control mr-sm-2" type="search" placeholder="Title Search" aria-label="Search">
+                <input class="btn btn-outline-success my-2 my-sm-0" type="submit" value="Search">
+            </form>
+        </p>
     </header>
     
+    <!-- display publications in a grid -->
     <div class="row justify-content-center text-center" id="publication-grid">
         <% publications.forEach(function(publication){ %>
             <!-- <div class="col-lg-3 col-md-4 col-sm-6 mb-4"> -->
@@ -27,7 +25,7 @@
                 <div class="card bg-info">
                     <img class="card-img-top" src="<%= publication.image%>" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title"><%= publication.name %></h5>
+                        <h5 class="card-title"><%= publication.title %></h5>
                         <!--<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
                         <a href="/publications/<%= publication._id%>" class="btn btn-primary">More info</a>
                     </div>
@@ -36,53 +34,52 @@
         <% }); %>
     </div>
     
-    
+ 
     <!--display page number index-->
-    <hr>
-    <div class="row justify-content-center">
+    <nav aria-label="publications pages">
         <% if (pages && pages > 0) { %>
-        <ul class="pagination text-center">
-            <% if (current == 1) { %>
-            <li class="disabled"><a>First</a></li>
-            <% } else { %>
-            <li><a href="/publications">First</a></li>
-            <% } %>
-     
-            <% if (current == 1) { %>
-            <li class="disabled"><a>«</a></li>
-            <% } else { %>
-            <li><a href="/publications?page=<%= Number(current) - 1 %>">«</a></li>
-            <% } %>
-     
-            <% var i = (Number(current) > 5 ? Number(current) - 4 : 1) %>
-            <% if (i !== 1) { %>
-            <li class="disabled"><a>...</a></li>
-            <% } %>
-            <% for (; i <= (Number(current) + 4) && i <= pages; i++) { %>
-            <% if (i == current) { %>
-            <li class="active"><a><%= i %></a></li>
-            <% } else { %>
-            <li><a href="/publications?page=<%= i %>"><%= i %></a></li>
-            <% } %>
-            <% if (i == Number(current) + 4 && i < pages) { %>
-            <li class="disabled"><a>...</a></li>
-            <% } %>
-            <% } %>
-     
-            <% if (current == pages) { %>
-            <li class="disabled"><a>»</a></li>
-            <% } else { %>
-            <li><a href="/publications?page=<%= Number(current) + 1 %>">»</a></li>
-            <% } %>
-     
-            <% if (current == pages) { %>
-            <li class="disabled"><a>Last</a></li>
-            <% } else { %>
-            <li><a href="/publications?page=<%= pages %>">Last</a></li>
-            <% } %>
-        </ul>
+            <ul class="pagination justify-content-center">
+                <% if (current == 1) { %>
+                <li class="page-item disabled"><a class="page-link">First</a></li>
+                <% } else { %>
+                <li class="page-item"><a class="page-link" href="/publications">First</a></li>
+                <% } %>
+         
+                <% if (current == 1) { %>
+                <li class="page-item disabled"><a>«</a></li>
+                <% } else { %>
+                <li class="page-item"><a class="page-link" href="/publications?page=<%= Number(current) - 1 %>">«</a></li>
+                <% } %>
+         
+                <% var i = (Number(current) > 5 ? Number(current) - 4 : 1) %>
+                <% if (i !== 1) { %>
+                <li class="page-item disabled"><a class="page-link">...</a></li>
+                <% } %>
+                <% for (; i <= (Number(current) + 4) && i <= pages; i++) { %>
+                <% if (i == current) { %>
+                <li class="page-item active"><a class="page-link"><%= i %></a></li>
+                <% } else { %>
+                <li class="page-item"><a class="page-link" href="/publications?page=<%= i %>"><%= i %></a></li>
+                <% } %>
+                <% if (i == Number(current) + 4 && i < pages) { %>
+                <li class="page-item disabled"><a class="page-link">...</a></li>
+                <% } %>
+                <% } %>
+         
+                <% if (current == pages) { %>
+                <li class="page-item disabled"><a class="page-link">»</a></li>
+                <% } else { %>
+                <li class="page-item"><a class="page-link" href="/publications?page=<%= Number(current) + 1 %>">»</a></li>
+                <% } %>
+         
+                <% if (current == pages) { %>
+                <li class="page-item disabled"><a class="page-link">Last</a></li>
+                <% } else { %>
+                <li class="page-item"><a class="page-link" href="/publications?page=<%= pages %>">Last</a></li>
+                <% } %>
+            </ul>
         <% } %>
-    </div>
+    </nav>
     
 </div>
 
